--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bulma": "^0.9.3",
+    "bulma-quickview": "^2.0.0",
     "jquery": "^3.6.0",
+    "rails-erb-loader": "^5.5.2",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
